# chat_analyzer_project

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-images.yml  security-secret-scan.yml
apps/api/: Dockerfile  alembic.ini
apps/web/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json
assets/demo/: sample_chat.json
backend/: Dockerfile
backend/app/: main.py
backend/tests/: test_analyzer.py  test_api_integration.py  test_chart_registry.py  test_dashboard_builder.py  test_file_storage.py  test_rate_limit.py  test_repo.py  test_request_logging.py  test_serializers.py  test_task_runner.py
chat_analyzer/: data_loader.py  reporting.py  utils.py
chat_analyzer/analysis/: activity.py  anomaly.py  (+8 more)
docs/: README.md  architecture.en.md  configuration.en.md  configuration.ru.md  getting-started.en.md  getting-started.ru.md  operations.en.md  user-guide.en.md  user-guide.ru.md
examples/: README.md  example_chat.json
frontend/: Dockerfile  package.json  tailwind.config.ts
infra/: docker-compose.prod.yml  docker-compose.yml
tests/: test_anomaly.py  test_cli_smoke.py  test_data_loader.py  test_new_features.py  test_nlp.py  test_reporting.py  test_timezone.py
(+105 files in other folders)
