[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-analyzer-monorepo"
version = "0.1.0"
description = "Chat analyzer monorepo"
requires-python = ">=3.11"
dependencies = [
  "emoji",
  "fastapi",
  "httpx>=0.27,<1.0",
  "ijson",
  "numpy",
  "pandas",
  "pydantic>=2,<3",
  "python-multipart",
  "spacy",
  "uvicorn[standard]",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = [".", "apps/api/src", "packages/analyzer-core/src"]
testpaths = ["apps/api/tests", "packages/analyzer-core/tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["apps/api/src", "packages/analyzer-core/src", "apps/api/tests", "packages/analyzer-core/tests"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
